Use and instead of comma.

--- a/report.tex
+++ b/report.tex
@@ -15,7 +15,7 @@
 \bibfile{references}
 
 \title{Process Calculi for Concurrency}
-\author{Markus Reiter, Michael Kaltschmid}
+\author{Markus Reiter and Michael Kaltschmid}
 \supervisor{Vincent van Oostrom}
 
 \begin{document}
