Add ACP to references.

--- a/references.bib
+++ b/references.bib
@@ -15,14 +15,19 @@
 }
 
 @webpage{process_calculus_wiki,
-	title   = {{Process calculus Wikipedia article}},
+	title   = {{P}rocess calculus --- {W}ikipedia},
 	url     = {https://en.wikipedia.org/wiki/Process_calculus},
 	urldate = {2017-02-22},
 }
 
 @webpage{bisimulation_wiki,
-	title   = {{Bisimulation Wikipedia article}},
+	title   = {{B}isimulation --- {W}ikipedia},
 	url     = {https://en.wikipedia.org/wiki/Bisimulation},
 	urldate = {2017-02-22},
 }
 
+@webpage{acp_wiki,
+  title   = {{A}lgebra of {C}ommunicating {P}rocesses --- {W}ikipedia},
+  url     = {https://en.wikipedia.org/wiki/Algebra_of_Communicating_Processes},
+  urldate = {2017-02-27},
+}
