Add explanation on how to use `ltsgraph`.

--- a/report.tex
+++ b/report.tex
@@ -565,6 +565,8 @@ ltsgraph coffee_machine_1.lts
     \label{fig:ltsgraph}
   \end{figure}
 
+  As you can see in \autoref{fig:ltsgraph}, the green circle represents the starting state. In the \textit{Automatic Layout} section, you can click \textit{start} to automatically lay out the graph, which usually makes it much more readable. You can then drag the state circles around and by right-clicking them, you can fix their positions, so that they are not affected by the automatic layout anymore. One additional feature is \textit{Exploration Mode}. You can access it from the \textit{Tools} menu. In this mode, you can traverse the graph, beginning in the starting state.
+
   \subsection{Bisimilarity}
 
   The last tool we want to demonstrate is \texttt{ltscompare}, which as the name implies is used to compare two LTSs.
