--- a/report.tex
+++ b/report.tex
@@ -10,7 +10,7 @@
 \usepackage{forest}
 
 \usepackage[T1]{fontenc}
-\usepackage{biblatex}
+\usepackage[sorting = none]{biblatex}
 \addbibresource{references.bib}
 
 \usepackage{caption}
