Add explanation of output for `ltscompare`.

--- a/report.tex
+++ b/report.tex
@@ -593,6 +593,18 @@ ltscompare --equivalence=bisim coffee_machine_1.lts coffee_machine_2.lts
 
   Again, all available equivalences can be seen in the tool's help page (\texttt{-h} flag) or in the \texttt{mCRL2} documentation \cite{mcrl2doc}.
 
+  From the command, we get the following output:
+
+  \begin{lstlisting}
+LTSs are not equal (strong bisimilarity using the O(m log n) algorithm [Groote/Jansen/Keiren/Wijs 2017])
+  \end{lstlisting}
+
+  So in fact, the two LTSs are not bisimilar.
+
+  \section{Conclusion}
+
+  TODO
+
   \backmatter
 
   \phantomsection{\addcontentsline{toc}{section}{\bibname}}
