Add short explanation why an LTS is useful.

--- a/report.tex
+++ b/report.tex
@@ -547,7 +547,7 @@ true
 
   \subsection{LTS}
 
-  The \texttt{lps2lts} command is used to convert an LPS into an LTS.
+  An LTS is a useful way of getting a visual overview of a process. The \texttt{lps2lts} command can be used to convert an LPS into an LTS.
 
   \begin{lstlisting}[language=Bash]
 lps2lts coffee_machine_1.lps coffee_machine_1.lts
