Use example block.

--- a/report.tex
+++ b/report.tex
@@ -307,10 +307,13 @@
     \end{tikzpicture}
   \end{center}
 
-  The first question is if $\mu X. \langle a \rangle X$ and $\nu X. \langle a \rangle X$ hold for the state $s$. \\
-  The states in question are the empty set $X = \emptyset$ and the set of all states $X = \{s\}$. \\
-  $X = \emptyset$ is the same as $X = \langle a \rangle X$, which can be further reduced to $\mathit{false} = \langle a \rangle \mathit{false}$, which we can see is valid. \\
-  Therefore $\mu X. \langle a \rangle X$ - minimal fixed point is valid for all states in the empty set but not in $s$ and $\nu X. \langle a \rangle X$ - maximal fixed point is valid for all states in the largest set $\{s\}$.
+  \\
+  \begin{example}
+    The first question is if $\mu X. \langle a \rangle X$ and $\nu X. \langle a \rangle X$ hold for the state $s$. \\
+    The states in question are the empty set $X = \emptyset$ and the set of all states $X = \{s\}$. \\
+    $X = \emptyset$ is the same as $X = \langle a \rangle X$, which can be further reduced to $\mathit{false} = \langle a \rangle \mathit{false}$, which we can see is valid. \\
+    Therefore $\mu X. \langle a \rangle X$ - minimal fixed point is valid for all states in the empty set but not in $s$ and $\nu X. \langle a \rangle X$ - maximal fixed point is valid for all states in the largest set $\{s\}$.
+  \end{example}
 
   \section{ACP}
 
