--- a/report.tex
+++ b/report.tex
@@ -258,7 +258,7 @@
   \subsubsection{Safety Property}
 
   \begin{align*}
-    \square\phi \text{ says that Something bad will never happen.}
+    \square\phi \text{ says that something bad will never happen.}
   \end{align*}
 
   It is best to show this with an example. The following is a program with a critical region and two actions, enter and leave.
